--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%= form_with model: @user do |f| %>
+    <%= f.label :name, 'ユーザー名' %>
+    <%= f.text_field :name %>
+    <br>
+    <%= f.label :pass, 'パスワード' %>
+    <%= f.text_field :pass %>
+    <br>
+    <%= f.submit '新規登録' %>
+<% end %>
