--- a/app/views/top/login.html.erb
+++ b/app/views/top/login.html.erb
@@ -69,7 +69,7 @@
 </style>
 
 <div class="login-container">
-  <h2>ログイン</h2>
+  <h2>GameQuest</h2>
   <%= form_with url: '/top/login', method: :post, local: true do |f| %>
     <%= f.label :name, 'ユーザー名' %>
     <%= f.text_field :name %>
