--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Carts#show</h1>
-<p>Find me in app/views/carts/show.html.erb</p>
+<% @cartitems.each do |e| %>
+    商品名 : <%= Product.find(e.product_id).name %>
+    価格 : <%= Product.find(e.product_id).price %>
+    数量 : <%= e.qty %>
+    <%= link_to '削除', cartitem_path(e), data: { turbo_method: :delete } %>
+    <br>
+<% end %>
+
+<%= link_to "商品一覧に戻る", root_path %>
