--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<% @products.each do |e| %>
+  商品名 : <%= e.name %>, 価格 : <%= e.price %>
+  <%= link_to '削除', product_path(e), data: { turbo_method: :delete } %>
+  <%= link_to 'カート追加', new_cartitem_path(product_id: e.id) %>
+  <br>
+<% end %>
+
+<%= link_to "新規追加", new_product_path %>
+
+<%= link_to "カートを見る", cart_path(current_cart.id) %>
