--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,11 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<%= form_with model: @product do |f| %>
+  <p>
+    <%= f.label :name, '商品名' %>
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :price, '価格' %>
+    <%= f.text_field :price %>
+  </p>
+  <%= f.submit '登録' %>
+<% end %>
