--- a/app/views/cartitems/new.html.erb
+++ b/app/views/cartitems/new.html.erb
@@ -1,16 +1,23 @@
 <%= form_with model: @cart_item, url: cartitems_path do |f| %>
   <p>
+    <%= image_tag "/get_image/#{f.id}" %>
+  </p>
+  <p>
     <%= f.label :name, '商品名' %>
     <%= Product.find(params[:product_id]).name %>
+  </p>
+  <p>
+    <%= f.label :explanation, '商品説明' %>
+    <%= Product.find(params[:product_id]).explanation %>
   </p>
   <p>
     <%= f.label :price, '価格' %>
     <%= Product.find(params[:product_id]).price %>
   </p>
   <p>
-    <%= f.label :qty, '数量' %>
+    <%= f.label :qty, '個数' %>
     <%= f.text_field :qty %>
   </p>
   <%= f.hidden_field :product_id, value: params[:product_id] %>
-  <%= f.submit '商品を登録する' %>
+  <%= f.submit 'カートに入れる' %>
 <% end %>
