--- a/app/views/top/main.html.erb
+++ b/app/views/top/main.html.erb
@@ -2,6 +2,22 @@
   <!--
   <h1>ようこそ、<%= current_user.name %> さん！</h1>
 
+
+<!--12/11 検索機能-->
+<% if user_signed_in? %>
+  <div class="search_form">
+    <%= form_with url: search_path, local: true, method: :get do |f| %>
+      <%= f.text_field :word %>
+      <%= f.select :range, options_for_select([['User'], ['Product']]) %>
+      <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+      <%= f.submit "検索", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+<% end %>
+<!----------------->
+
+
+
   <div class="menu">
     <h2>メニュー</h2>
     <ul>
@@ -57,4 +73,13 @@
   <p>欲しいものリストにアイテムがありません。</p>
 <% end %>
 -->
+
+
+
+
+
+
+
+
+
 </div>
