--- a/app/views/top/main.html.erb
+++ b/app/views/top/main.html.erb
@@ -1,6 +1,6 @@
 <div class="main-container">
   <!--
-  <h1>ようこそ、<%= current_user.name %> さん！</h1>
+  <h1>ようこそ、<%= @current_user.name %> さん！</h1>
 
 
 <!--12/11 検索機能-->
