--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -60,15 +60,26 @@
 
 <div class="form-container">
   <h2>新規登録</h2>
-  <%= form_with model: @user do |f| %>
-    <%= f.label :name, 'ユーザー名' %>
-    <%= f.text_field :name %>
-    <%= f.label :pass, 'パスワード' %>
-    <%= f.text_field :pass %>
-    <%= f.label :email, 'メールアドレス' %>
-    <%= f.text_field :email %>
-    <%= f.label :address, '住所' %>
-    <%= f.text_field :address %>
-    <%= f.submit '登録' %>
+  <%= form_with model: @user, local: true, url: users_path do |f| %>
+  <div>
+    <%= f.label :name, "ユーザー名" %>
+    <%= f.text_field :name, required: true %>
+  </div>
+  <div>
+    <%= f.label :pass, "パスワード" %>
+    <%= f.password_field :pass, required: true %>
+  </div>
+  <div>
+    <%= f.label :email, "メールアドレス" %>
+    <%= f.email_field :email, required: true %>
+  </div>
+  <div>
+    <%= f.label :address, "住所" %>
+    <%= f.text_field :address, required: true %>
+  </div>
+  <div>
+    <%= f.submit "登録" %>
+  </div>
   <% end %>
 </div>
+
