--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -117,7 +117,7 @@
     </div>
 
     <div class="return-link">
-      <%= link_to "トップに戻る", root_path %>
+      <%= link_to "トップに戻る", top_index_path %>
     </div>
   </div>
 </body>
