--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -107,6 +107,6 @@
     <% end %>
   </div>
     <!-- トップへ戻るボタン -->
-  <%= link_to 'トップへ戻る', root_path, class: 'back-to-top' %>
+  <%= link_to 'トップへ戻る', top_index_path, class: 'back-to-top' %>
 </body>
 </html>
